--- a/Employee_002/Views/Employees/Delete.cshtml
+++ b/Employee_002/Views/Employees/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Employees</h4>
     <hr />
@@ -36,7 +36,7 @@
             @Html.DisplayFor(model => model.OfficeLocation)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="EmployeeId" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
