--- a/Employee_002/Views/Employees/Edit.cshtml
+++ b/Employee_002/Views/Employees/Edit.cshtml
@@ -6,7 +6,6 @@
 
 <h2>Edit</h2>
 
-<h4>Employees</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -34,15 +33,14 @@
                 <span asp-validation-for="OfficeLocation" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Submit" class="btn btn-primary" style="width:49%" />
+                <a asp-action="Index" class="btn btn-ouline-primary" style="width:49%"><span class="glyphicon glyphicon-list"></span>Back to List</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
